# tt_zoo

./: dune-project  tt_zoo.opam
elaboration_zoo/01_eval_HOAS_names/: ast.ml  dune  menhir_parser.mly  normalize.ml
elaboration_zoo/01_eval_closures_debruijn/: ast.ml  dune  lexer.mll  menhir_parser.mly  normalize.ml  parser.ml  test.ml
elaboration_zoo/01_eval_closures_names/: ast.ml  dune  lexer.mll  normalize.ml  test.ml
elaboration_zoo/02_typecheck_closures_debruijn/: ast.ml  dune  lexer.mll  menhir_parser.mly  normalize.ml  parser.ml  statement.ml  test.ml
elaboration_zoo/03_holes/: data_type.ml  dune  lexer.mll  menhir_parser.mly  normalize.ml  parser.ml
lib/: dune  tt_zoo.ml
nbe_dependent/: dune  eval_HOAS_names.ml  eval_closures_debruijn.ml  eval_closures_names.ml  holes.ml  typecheck_closure_debruijn.ml
stlc_with_prooftree/: dune  entry.ml
stlc_with_prooftree/examples/: simple.sltc
stlc_with_prooftree/lib/: ast.ml  dune  lexer.mll  menhir_parser.mly  parser.ml  statement.ml  typecheck.ml
test/: dune
utils/prooftree/: dune  proof_definition.ml  proof_to_typst.ml  test_output.ml
